--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 layout: default
 ---
 
-{% for post in site.posts limit:1 %}
+{% for post in site.posts limit:10 %}
   <article class="module color3">
     <h2>
       <a class="red" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
     </h2>
     <time>{{ post.date| date: "%m/%d/%Y" }}</time>
     <p>
-      {{ post.content  | truncate: 250 }}
+      {{ post.content | truncate: 250 }}
     </p>
   </article>
 {% endfor %}
 
-{% for post in site.posts offset:1 limit:4 %}
+<!-- {% for post in site.posts offset:1 limit:4 %}
   <article class="module color3">
     <h2>
       <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
     </h2>
     <time>{{ post.date| date: "%m/%d/%Y" }}</time>
 </article>
-{% endfor %}
+{% endfor %} -->
 
 <section class="module color3">
   <a href="{{ 'archives' | prepend: site.baseurl }}">More Posts &rarr;</a>
