--- a/details.html
+++ b/details.html
@@ -1,6 +1,6 @@
 ---
 layout: sub_default
 ---
-<h1><font size="+25">DETAILS</font></h1>
+<h1><font size="+25">THE APP</font></h1>
 
-<p>Hi, Krijn.</p>
+<p>The app would go here, I guess.</p>
